Initial file commit

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,21 @@ Release\*.*
 *.exe
 *.out
 *.app
+*.metagen
+Exporter/Debug/ExporterBridge.exp
+*.ilk
+Exporter/Debug/ExporterBridge.pdb
+*.pdb
+*.ini
+Exporter/Exporter.sdf
+*.suo
+Exporter/ipch/exporterhost-e66b3a48/exporterhost-23f8c1e3.ipch
+*.ipch
+*.tlog
+*.log
+*.bi
+*.lastbuildstate
+*.unsuccessfulbuild
+*.cache
+*.txt
+*.idb
