Update to Interfaces folder and compile on VS2010

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,8 @@ Exporter/ipch/exporterhost-e66b3a48/exporterhost-23f8c1e3.ipch
 *.cache
 *.txt
 *.idb
+*.sdf
+*.opensdf
+ImportExport/Exporter/Exporter.sdf
+*.res
+*.exp
