Further implementation of CTaskList wrapper

--- a/ImportExport/PluginHelpers/PluginHelpers.vcxproj
+++ b/ImportExport/PluginHelpers/PluginHelpers.vcxproj
@@ -83,6 +83,7 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="PluginHelpers.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
