Rename and restructure sample plugin

--- a/ImportExport/SampleImpExp/SampleImpExpBridge/SampleImpExpBridge.vcxproj
+++ b/ImportExport/SampleImpExp/SampleImpExpBridge/SampleImpExpBridge.vcxproj
@@ -12,7 +12,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{B382AA74-CAF8-4D01-B0A4-6A49F0979E45}</ProjectGuid>
-    <RootNamespace>ExporterBridge</RootNamespace>
+    <RootNamespace>SampleImpExpBridge</RootNamespace>
+    <ProjectName>SampleImpExpBridge</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -71,7 +72,7 @@
     <ClCompile Include="dllmain.cpp">
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</CompileAsManaged>
     </ClCompile>
-    <ClCompile Include="ExporterBridge.cpp">
+    <ClCompile Include="SampleImpExpBridge.cpp">
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</CompileAsManaged>
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</CompileAsManaged>
     </ClCompile>
@@ -80,9 +81,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ExporterBridge.h" />
-    <ClInclude Include="IImportExport.h" />
-    <ClInclude Include="Preferences.h" />
+    <ClInclude Include="SampleImpExpBridge.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
