--- a/ImportExport/SampleImpExp/SampleImpExpBridge/SampleImpExpBridge.vcxproj.filters
+++ b/ImportExport/SampleImpExp/SampleImpExpBridge/SampleImpExpBridge.vcxproj.filters
@@ -18,27 +18,21 @@
     <ClCompile Include="dllmain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ExporterBridge.cpp">
+    <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="stdafx.cpp">
+    <ClCompile Include="SampleImpExpBridge.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ExporterBridge.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="IImportExport.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Preferences.h">
+    <ClInclude Include="SampleImpExpBridge.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
