--- a/ImportExport/SampleImpExp/SampleImpExpCore/SampleImpExpCore.csproj
+++ b/ImportExport/SampleImpExp/SampleImpExpCore/SampleImpExpCore.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{92FEFDB8-3F95-4404-A620-8003B51C5A53}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ExporterCore</RootNamespace>
-    <AssemblyName>ExporterCore</AssemblyName>
+    <RootNamespace>SampleImpExp</RootNamespace>
+    <AssemblyName>SampleImpExpCore</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -38,7 +38,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PluginHelpers">
-      <HintPath>..\Exporter\Debug\PluginHelpers.dll</HintPath>
+      <HintPath>..\Sample\Debug\PluginHelpers.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -46,12 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="SampleImpExpCore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy $(TargetPath) "$(SolutionDir)debug\ExporterCore.dll"</PostBuildEvent>
+    <PostBuildEvent>copy $(TargetPath) "$(SolutionDir)debug\SampleImpExpCore.dll"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
