Add MarkdownLog source to project

--- a/ImportExport/MarkdownImpExp/MarkdownImpExpCore/MarkdownImpExpCore.csproj
+++ b/ImportExport/MarkdownImpExp/MarkdownImpExpCore/MarkdownImpExpCore.csproj
@@ -37,6 +37,9 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MarkdownLog">
+      <HintPath>..\Debug\MarkdownLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Windows.Forms" />
@@ -47,9 +50,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-	<Reference Include="PluginHelpers">
+    <Reference Include="PluginHelpers">
       <HintPath>..\Debug\PluginHelpers.dll</HintPath>
-    </Reference>  
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
