--- a/ImportExport/MarkdownImpExp/MarkdownImpExpBridge/MarkdownImpExpBridge.vcxproj.filters
+++ b/ImportExport/MarkdownImpExp/MarkdownImpExpBridge/MarkdownImpExpBridge.vcxproj.filters
@@ -35,5 +35,18 @@
     <ClInclude Include="MarkdownImpExpBridge.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="MarkdownImpExpBridge.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="markdown.ico">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
