Completed PoC, showing WPF canvas and label within View Tab

--- a/UIExension/SampleUIExtension/SampleUIExtensionBridge/SampleUIExtensionBridge.vcxproj
+++ b/UIExension/SampleUIExtension/SampleUIExtensionBridge/SampleUIExtensionBridge.vcxproj
@@ -85,6 +85,16 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
+    <Reference Include="SampleUIExtensionCore">
+      <HintPath>..\Debug\SampleUIExtensionCore.dll</HintPath>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="WindowsBase" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
