--- a/UIExension/StatsUIExtension/StatsUIExtensionCore/StatsUIExtensionCore.csproj
+++ b/UIExension/StatsUIExtension/StatsUIExtensionCore/StatsUIExtensionCore.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="system.windows.controls.datavisualization.toolkit">
+      <HintPath>..\Debug\system.windows.controls.datavisualization.toolkit.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xaml" />
