--- a/ContentControl/MDContentControl/MDContentControlCore/MDContentControlCore.csproj
+++ b/ContentControl/MDContentControl/MDContentControlCore/MDContentControlCore.csproj
@@ -37,17 +37,23 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MarkdownLog">
-      <HintPath>..\Debug\MarkdownLog.dll</HintPath>
-    </Reference>
     <Reference Include="MDContentControlCore, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Debug\MDContentControlCore.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="system.windows.controls.datavisualization.toolkit">
+      <HintPath>..\..\..\UIExension\StatsUIExtension\Debug\system.windows.controls.datavisualization.toolkit.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MDContentControlCore.cs" />
