--- a/ContentControl/MDContentControl/MDContentControlCore/MDContentControlCore.csproj
+++ b/ContentControl/MDContentControl/MDContentControlCore/MDContentControlCore.csproj
@@ -37,6 +37,9 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MarkdownSharp">
+      <HintPath>..\Debug\MarkdownSharp.dll</HintPath>
+    </Reference>
     <Reference Include="MDContentControlCore, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Debug\MDContentControlCore.dll</HintPath>
