--- a/ContentControl/MDContentControl/MDContentControlCore/MDContentControlCore.csproj
+++ b/ContentControl/MDContentControl/MDContentControlCore/MDContentControlCore.csproj
@@ -59,13 +59,24 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MDContentControlCore.cs" />
+    <Compile Include="MarkdownSharpEditorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MarkdownSharpEditorForm.Designer.cs" />
+    <Compile Include="MDContentControlCore.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="PluginHelpers">
       <HintPath>..\Debug\PluginHelpers.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="MDContentControlCore.resx">
+      <DependentUpon>MDContentControlCore.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
