Remove WS_EX_CLIENTEDGE and tweak border padding

--- a/ContentControl/MDContentControl/MDContentControlCore/MDContentControlCore.csproj
+++ b/ContentControl/MDContentControl/MDContentControlCore/MDContentControlCore.csproj
@@ -60,11 +60,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MarkdownSharpEditorForm.cs">
-      <SubType>Form</SubType>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="MarkdownSharpEditorForm.Designer.cs" />
     <Compile Include="MDContentControlCore.cs">
-      <SubType>Form</SubType>
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
