--- a/ImportExport/MarkdownImpExp/MarkdownLog/MarkdownLog.csproj
+++ b/ImportExport/MarkdownImpExp/MarkdownLog/MarkdownLog.csproj
@@ -1,19 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <MinimumVisualStudioVersion>10.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{58003E79-47E0-47D6-BF62-82051EFC1E8B}</ProjectGuid>
+    <ProductVersion>8.0.30703</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
+    <ProjectGuid>{F28C9FC0-8D67-459C-A177-2809CD1816F5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MarkdownLog</RootNamespace>
     <AssemblyName>MarkdownLog</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Profile24</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,49 +31,57 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="BarChart.cs" />
     <Compile Include="BarChartDataPoint.cs" />
     <Compile Include="BlockQuote.cs" />
     <Compile Include="BulletedList.cs" />
     <Compile Include="CodeBlock.cs" />
-    <Compile Include="ITableCell.cs" />
     <Compile Include="EmptyTableCell.cs" />
-    <Compile Include="MarkdownElement.cs" />
-    <Compile Include="MarkdownToHtmlConverter.cs" />
-    <Compile Include="MarkdownToHtmlExtensions.cs" />
-    <Compile Include="NumberExtensions.cs" />
-    <Compile Include="TableColumn.cs" />
-    <Compile Include="TableColumnAlignment.cs" />
-    <Compile Include="TableCell.cs" />
-    <Compile Include="TableCellRenderSpecification.cs" />
-    <Compile Include="TableRow.cs" />
     <Compile Include="Header.cs" />
     <Compile Include="HeaderBase.cs" />
     <Compile Include="HorizontalRule.cs" />
     <Compile Include="IIosTableViewCell.cs" />
     <Compile Include="IIosTableViewHeaderCell.cs" />
-    <Compile Include="TableView.cs" />
+    <Compile Include="IMarkdownElement.cs" />
     <Compile Include="IosTableViewCell.cs" />
-    <Compile Include="TableViewCellAccessory.cs" />
     <Compile Include="IosTableViewCheckmarkCell.cs" />
     <Compile Include="IosTableViewHeaderCell.cs" />
-    <Compile Include="TableViewSection.cs" />
+    <Compile Include="ITableCell.cs" />
     <Compile Include="ListBase.cs" />
     <Compile Include="ListItem.cs" />
-    <Compile Include="MarkdownContainer.cs" />
-    <Compile Include="NumberedList.cs" />
-    <Compile Include="Paragraph.cs" />
-    <Compile Include="RawMarkdown.cs" />
-    <Compile Include="SubHeader.cs" />
-    <Compile Include="IMarkdownElement.cs" />
     <Compile Include="MarkDownBuilderExtensions.cs" />
+    <Compile Include="MarkdownContainer.cs" />
+    <Compile Include="MarkdownElement.cs" />
+    <Compile Include="MarkdownToHtmlConverter.cs" />
+    <Compile Include="MarkdownToHtmlExtensions.cs" />
+    <Compile Include="NumberedList.cs" />
+    <Compile Include="NumberExtensions.cs" />
+    <Compile Include="Paragraph.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StringExtensions.cs" />
-    <Compile Include="Table.cs" />
+    <Compile Include="RawMarkdown.cs" />
     <Compile Include="ReflectionExtensions.cs" />
+    <Compile Include="StringExtensions.cs" />
+    <Compile Include="SubHeader.cs" />
+    <Compile Include="Table.cs" />
+    <Compile Include="TableCell.cs" />
+    <Compile Include="TableCellRenderSpecification.cs" />
+    <Compile Include="TableColumn.cs" />
+    <Compile Include="TableColumnAlignment.cs" />
+    <Compile Include="TableRow.cs" />
+    <Compile Include="TableView.cs" />
+    <Compile Include="TableViewCellAccessory.cs" />
+    <Compile Include="TableViewSection.cs" />
   </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy $(TargetPath) "$(SolutionDir)debug\MarkdownLog.dll"</PostBuildEvent>
   </PropertyGroup>
