--- a/ImportExport/SampleImpExp/SampleImpExpCore/SampleImpExpCore.csproj
+++ b/ImportExport/SampleImpExp/SampleImpExpCore/SampleImpExpCore.csproj
@@ -37,9 +37,6 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="SampleUIExtensionCore">
-      <HintPath>..\..\..\UIExension\SampleUIExtension\Debug\SampleUIExtensionCore.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Windows.Forms" />
@@ -51,7 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="PluginHelpers">
-      <HintPath>..\Debug\PluginHelpers.dll</HintPath>
+      <HintPath>..\..\..\Debug\PluginHelpers.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
