--- a/UIExension/SampleUIExtension/SampleUIExtensionCore/SampleUIExtensionCore.csproj
+++ b/UIExension/SampleUIExtension/SampleUIExtensionCore/SampleUIExtensionCore.csproj
@@ -58,7 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="PluginHelpers">
-      <HintPath>..\Debug\PluginHelpers.dll</HintPath>
+      <HintPath>..\..\..\Debug\PluginHelpers.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
