--- a/UIExension/DayViewUIExtension/DayViewUIExtensionCore/DayViewUIExtensionCore.csproj
+++ b/UIExension/DayViewUIExtension/DayViewUIExtensionCore/DayViewUIExtensionCore.csproj
@@ -48,6 +48,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TDLRenderer.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
