--- a/UIExension/SampleUIExtension/SampleUIExtensionBridge/SampleUIExtensionBridge.vcxproj
+++ b/UIExension/SampleUIExtension/SampleUIExtensionBridge/SampleUIExtensionBridge.vcxproj
@@ -53,7 +53,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>cmkdir "$(SolutionDir)$(ConfigurationName)"
+      <Command>mkdir "$(SolutionDir)$(ConfigurationName)"
 copy $(TargetPath) "$(SolutionDir)$(ConfigurationName)\"
 mkdir "$(SolutionDir)..\ToDoList"
 mkdir "$(SolutionDir)..\ToDoList\unicode_$(ConfigurationName)"
