Add DayView icon

--- a/ImportExport/SampleImpExp/SampleImpExpBridge/SampleImpExpBridge.vcxproj
+++ b/ImportExport/SampleImpExp/SampleImpExpBridge/SampleImpExpBridge.vcxproj
@@ -96,9 +96,13 @@ copy $(TargetPath) "$(SolutionDir)..\ToDoList\unicode_$(ConfigurationName)\"</Co
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="resource.h" />
     <ClInclude Include="SampleImpExpBridge.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="SampleImpExpBridge.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
