--- a/UIExension/DayViewUIExtension/DayViewUIExtensionBridge/DayViewUIExtensionBridge.vcxproj
+++ b/UIExension/DayViewUIExtension/DayViewUIExtensionBridge/DayViewUIExtensionBridge.vcxproj
@@ -97,6 +97,7 @@ copy $(TargetPath) "$(SolutionDir)..\ToDoList\unicode_$(ConfigurationName)\"</Co
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DayViewUIExtensionBridge.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -109,6 +110,12 @@ copy $(TargetPath) "$(SolutionDir)..\ToDoList\unicode_$(ConfigurationName)\"</Co
     <Reference Include="System" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="WindowsBase" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="DayViewUIExtensionBridge.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="dayview.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
