--- a/ImportExport/SampleImpExp/SampleImpExpBridge/SampleImpExpBridge.vcxproj.filters
+++ b/ImportExport/SampleImpExp/SampleImpExpBridge/SampleImpExpBridge.vcxproj.filters
@@ -35,5 +35,13 @@
     <ClInclude Include="SampleImpExpBridge.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="SampleImpExpBridge.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
