--- a/PluginHelpers/PluginHelpers.vcxproj.filters
+++ b/PluginHelpers/PluginHelpers.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="TDLTranslate.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TDLContentControl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TDLTranslate.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TDLContentControl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
