Fix post build copy to plugins

--- a/ToDoList/ToDoList.vcxproj
+++ b/ToDoList/ToDoList.vcxproj
@@ -103,10 +103,10 @@
       <OutputFile>.\Unicode_Debug/ToDoList.bsc</OutputFile>
     </Bscmake>
     <PostBuildEvent>
-      <Command>mkdir ..\ToDoList_Plugins
-mkdir ..\ToDoList_Plugins\debug
-copy unicode_debug\ToDoList.exe ..\todolist_Plugins\debug /y
-copy unicode_debug\ToDoList.pdb ..\todolist_Plugins\debug /y</Command>
+      <Command>mkdir ..\..\ToDoList_Plugins
+mkdir ..\..\ToDoList_Plugins\debug
+copy unicode_debug\ToDoList.exe ..\..\todolist_Plugins\debug /y
+copy unicode_debug\ToDoList.pdb ..\..\todolist_Plugins\debug /y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">
@@ -156,6 +156,12 @@ copy unicode_debug\ToDoList.pdb ..\todolist_Plugins\debug /y</Command>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <OutputFile>.\Unicode_Release/ToDoList.bsc</OutputFile>
     </Bscmake>
+    <PostBuildEvent>
+      <Command>mkdir ..\..\ToDoList_Plugins
+mkdir ..\..\ToDoList_Plugins\release
+copy unicode_debug\ToDoList.exe ..\..\todolist_Plugins\release /y
+</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="FilteredToDoCtrl.cpp">
